--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -13,16 +13,17 @@
                 <Label Content="Main Settings" HorizontalAlignment="Left" Margin="10,3.04,0,0" VerticalAlignment="Top" Width="463.896" Background="{x:Null}" BorderThickness="1" FontWeight="Bold" FontSize="18"/>
                 <Path Data="M10,77.667 L472.896,80.667" Height="1" Margin="10,38.98,10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top"/>
                 <!--<Border BorderThickness="10" BorderBrush="#FFAB0000"></Border>-->
-                <ToggleButton Margin="0,271.4,50,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}" HorizontalAlignment="Right">
+                <!--<ToggleButton Margin="0,271.4,50,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}" HorizontalAlignment="Right">
                     <StackPanel>
                         <Image Source="../img/close.png.png" Width="30" HorizontalAlignment="Right"/>
                     </StackPanel>
-                </ToggleButton>
+                </ToggleButton>-->
                 <ToggleButton x:Name="toggleButton" Margin="0,49.548,50,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked" Width="40" HorizontalAlignment="Right"/>
                 <TextBox x:Name="IntervalInput" KeyUp="KeyUp" Background="{x:Null}" Margin="0,94.548,50,0" VerticalAlignment="Top" Height="45" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="0" HorizontalAlignment="Right"/>
                 <Label Content="Auto" Margin="10,44.98,0,0" VerticalAlignment="Top" Width="110.88" Height="45" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <Label Content="Incrementing BPM &#xD;&#xA;Per song" x:Name="setBpm" Margin="10,149.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
-                <Label Content="Cool switch" Margin="10,259.98,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <!--<Label Content="Cool switch" Margin="10,259.98,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                -->
                 <Label Content="Interval" HorizontalAlignment="Left" Margin="10,94.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="#DDC9C9C9"/>
 
 
@@ -191,13 +192,14 @@
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,121,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,182,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,243,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
-            -->
+            --> <!--
                 <Label Content="Server Settings" HorizontalAlignment="Left" Margin="10,316.4,0,0" VerticalAlignment="Top" Width="463.896" Background="{x:Null}" BorderThickness="1" FontWeight="Bold" FontSize="18"/>
                 <Path Data="M10,77.667 L472.896,80.667" Height="1" Margin="10,352.37,10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top"/>
                 <Label Content="Cool switch" Margin="10,358.37,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <Label Content="Cool switch" Margin="10,412.77,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <Label Content="Cool switch" Margin="10,467.17,0,-2.25" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
-            </Grid>
+            -->
+                </Grid>
         </ScrollViewer>
     </Grid>
 </Page>
