--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -185,22 +185,28 @@
                 </Button>
 
                 <Label Content="Base BPM" x:Name="setBpm_Copy" Margin="10,204.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <Label Content="Time" x:Name="setTime" Margin="10,259,0,0" VerticalAlignment="Top" Width="111" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <ToggleButton x:Name="toggleButton2" Margin="0,262,116,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="TimerActive" Unchecked="TimerUnactive" Width="40" HorizontalAlignment="Right"/>
+
                 <TextBox x:Name="BPMPerSong" Background="{x:Null}" Margin="0,149.98,50,0" VerticalAlignment="Top" Height="45" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" HorizontalContentAlignment="Center" Text="0" HorizontalAlignment="Right" TextChanged="BPMPerSong_TextChanged"/>
                 <TextBox x:Name="BpmInput" KeyUp="KeyUp" Background="{x:Null}" Margin="0,214.98,50,0" VerticalAlignment="Top" Height="40" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="240" HorizontalAlignment="Right"/>
+                <TextBox x:Name="TimeInput" KeyUp="KeyUpTime" Background="{x:Null}" Margin="0,261.98,50,0" VerticalAlignment="Top" Height="40" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="45" HorizontalAlignment="Right"/>
+
                 <Button Content="+" Margin="0,219.98,95,0" VerticalAlignment="Top" Width="35" FontSize="24" FontFamily="Roboto Thin" Height="35" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" Opacity="0.495" HorizontalAlignment="Right" Click="IncreaseBaseBPMPerSong_Click"/>
                 <Button Content="¯" Margin="0,223.98,10,0" VerticalAlignment="Top" Width="35" FontSize="48" FontFamily="Roboto Thin" Height="31" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" Opacity="0.495" HorizontalAlignment="Right" Click="DecreaseBaseBPMPerSong_Click"/>
                 <!--<Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,60,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,121,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,182,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
                 <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,243,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
-            --> <!--
+            -->
+                <!--
                 <Label Content="Server Settings" HorizontalAlignment="Left" Margin="10,316.4,0,0" VerticalAlignment="Top" Width="463.896" Background="{x:Null}" BorderThickness="1" FontWeight="Bold" FontSize="18"/>
                 <Path Data="M10,77.667 L472.896,80.667" Height="1" Margin="10,352.37,10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top"/>
                 <Label Content="Cool switch" Margin="10,358.37,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <Label Content="Cool switch" Margin="10,412.77,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <Label Content="Cool switch" Margin="10,467.17,0,-2.25" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
             -->
-                </Grid>
+            </Grid>
         </ScrollViewer>
         <TextBlock HorizontalAlignment="Left" Height="0.452" Margin="-66,108.548,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="1"/>
     </Grid>
