--- a/pages/Container.xaml
+++ b/pages/Container.xaml
@@ -140,27 +140,44 @@
         </Image>-->
 
         <materialDesign:Snackbar x:Name="SnackBarDialog" MessageQueue="{materialDesign:MessageQueue}" Height="51" Margin="80,0,260,0" Grid.Row="1" HorizontalAlignment="Stretch" Grid.Column="1" Width="420" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Center" Background="#00796b" Foreground="White" Grid.ColumnSpan="2" />
-        <Button x:Name="SettingsButtonOpen" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Grid.Column="2" HorizontalAlignment="Right" Margin="0,0,10,25" Grid.Row="1" VerticalAlignment="Bottom" Width="48" Background="{x:Null}" BorderBrush="{x:Null}" Height="48" RenderTransformOrigin="0.52,0.52">
-            <Button.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Button.RenderTransform>
-            <materialDesign:PackIcon Kind="Settings" Width="48" Height="48"></materialDesign:PackIcon>
-        </Button>
-        <Button x:Name="SettingsButtonClose" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Grid.Column="2" HorizontalAlignment="Right" Grid.Row="1" VerticalAlignment="Bottom" Width="48" Background="{x:Null}" BorderBrush="{x:Null}" Height="48" ScrollViewer.CanContentScroll="True" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Margin="0,0,10,25" RenderTransformOrigin="0.52,0.52" Visibility="Collapsed">
-            <Button.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="120"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Button.RenderTransform>
-            <materialDesign:PackIcon Kind="Settings" Width="48" Height="48"></materialDesign:PackIcon>
-        </Button>
+        <Grid Grid.Row="2" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="118*"/>
+            <ColumnDefinition Width="20"/>
+
+            <ColumnDefinition Width="91*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="4" Orientation="Horizontal" Margin="0,6,0,37" VerticalAlignment="Center" Width="190">
+                <Rectangle VerticalAlignment="Stretch" MinWidth="115"></Rectangle>
+
+                <Button x:Name="SettingsButtonOpen" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Grid.Column="2" HorizontalAlignment="Right"  Grid.Row="1" VerticalAlignment="Bottom" Width="48" Background="{x:Null}" BorderBrush="{x:Null}" Height="48" RenderTransformOrigin="0.52,0.52">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="0"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <materialDesign:PackIcon Kind="Settings" Width="48" Height="48"></materialDesign:PackIcon>
+                </Button>
+                <Button x:Name="SettingsButtonClose" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Grid.Column="2" HorizontalAlignment="Right" Grid.Row="1" VerticalAlignment="Bottom" Width="48" Background="{x:Null}" BorderBrush="{x:Null}" Height="48" ScrollViewer.CanContentScroll="True" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"  RenderTransformOrigin="0.52,0.52" Visibility="Collapsed">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="120"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <materialDesign:PackIcon Kind="Settings" Width="48" Height="48"></materialDesign:PackIcon>
+                </Button>
+            </StackPanel>
+            
+        </Grid>
+        
     </Grid>
 </Page>
