--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -19,8 +19,8 @@
                 </ToggleButton>-->
                 <ToggleButton x:Name="toggleButton" Margin="0,49.548,50,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked" Width="40" HorizontalAlignment="Right"/>
                 <TextBox x:Name="IntervalInput" KeyUp="KeyUp" Background="{x:Null}" Margin="0,94.548,50,0" VerticalAlignment="Top" Height="45" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="0" HorizontalAlignment="Right"/>
-                <Label Content="Auto" Margin="10,44.98,0,0" VerticalAlignment="Top" Width="110.88" Height="45" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
-                <Label Content="Incrementing BPM &#xD;&#xA;Per song" x:Name="setBpm" Margin="10,149.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <Label Content="BPM autoplay" Margin="10,44.98,0,0" VerticalAlignment="Top" Width="110.88" Height="45" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <Label Content="Jump" x:Name="setBpm" Margin="10,149.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <!--<Label Content="Cool switch" Margin="10,259.98,0,0" VerticalAlignment="Top" Width="110.88" Height="49.4" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 -->
                 <Label Content="Interval" HorizontalAlignment="Left" Margin="10,94.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="#DDC9C9C9"/>
@@ -185,8 +185,8 @@
                 </Button>
 
                 <Label Content="Base BPM" x:Name="setBpm_Copy" Margin="10,204.98,0,0" VerticalAlignment="Top" Width="110.88" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
-                <Label Content="Time" x:Name="setTime" Margin="10,259,0,0" VerticalAlignment="Top" Width="111" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
-                <Label Content="Pause inbetween" x:Name="setPause" Margin="10,313,0,0" VerticalAlignment="Top" Width="111" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <Label Content="Count down" x:Name="setTime" Margin="10,259,0,0" VerticalAlignment="Top" Width="111" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
+                <Label Content="Delay inbetween" x:Name="setPause" Margin="10,313,0,0" VerticalAlignment="Top" Width="111" Height="50" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#DDC9C9C9"/>
                 <ToggleButton x:Name="toggleButton2" Margin="0,262,116,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="TimerActive" Unchecked="TimerUnactive" Width="40" HorizontalAlignment="Right"/>
                 <ToggleButton x:Name="toggleButton3" Margin="0,319,116,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="PauseBetween" Unchecked="DonotPauseBetween" Width="40" HorizontalAlignment="Right"/>
 
