Fixed fade on click in playlist

--- a/pages/PlayerControl.xaml
+++ b/pages/PlayerControl.xaml
@@ -154,7 +154,7 @@
         </Grid>
         <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaEnded="Player_MediaEnded" MediaOpened="Player_MediaOpened" Volume="0.7" LoadedBehavior="Manual"/>
         <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="../img/albumart_placeholder.png" MinWidth="80" MinHeight="80" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <Slider x:Name="VolumeSlider" Grid.Column="4" HorizontalAlignment="Center" Margin="0,67,0,16" VerticalAlignment="Center" Width="130" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01"/>
+        <Slider x:Name="VolumeSlider" Grid.Column="4" HorizontalAlignment="Center" Margin="62.233,67,56.5,11" VerticalAlignment="Center" Width="130" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01" Height="22"/>
         <Image x:Name="VolumeButton" Grid.Column="4" Height="18" Margin="0,67,152,15" Width="18" Source="volume-high.png" Opacity="0.795" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalAlignment="Center"/>
         <StackPanel Grid.Column="4" Orientation="Horizontal" Margin="0,6,0,37" VerticalAlignment="Center" Width="180">
             <Image x:Name="ShuffleButton" HorizontalAlignment="Center" Height="64"  VerticalAlignment="Center" Width="63" Source="../img/shuffle.png" RenderTransformOrigin="-0.808,-0.869" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" Opacity="0.9" MouseUp="ShuffleButton_MouseUp">
