--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,16 +6,16 @@
         xmlns:local="clr-namespace:DesignPrototype"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Project Stuffa" Height="630" Width="900"
+        Title="BPlay" Height="630" Width="900"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="#FF303030"
         TextElement.FontWeight="Medium"
         TextElement.FontSize="48"
         FontSize="16"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#RobotoLight" MinWidth="950" MinHeight="630" MaxWidth="2560" MaxHeight="1440" HorizontalContentAlignment="Center"
-        >
-    
-    
+        ResizeMode="CanResize">
+
+
     <WindowChrome.WindowChrome>
         <WindowChrome
             
@@ -25,11 +25,14 @@
             CornerRadius="25">
         </WindowChrome>
     </WindowChrome.WindowChrome>
-    
+
 
     <Grid x:Name="grid1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
 
-        <Grid HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="Transparent" MinWidth="800" MinHeight="600" >
+        <Grid HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="Transparent" MinWidth="800" MinHeight="600" Margin="0,0,0,-1" >
 
 
             <Grid.RowDefinitions>
@@ -42,7 +45,7 @@
             <Frame x:Name="ContainerView" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden" Background="#FF1F1F1F"/>
 
         </Grid>
-        
+
         <Grid HorizontalAlignment="Stretch"  VerticalAlignment="top" Background="#FF1F1F1F" MinWidth="800" MinHeight="30" Height="30">
 
 
@@ -59,13 +62,13 @@
             <Image x:Name="closeButton" Grid.Column="3" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
             <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.5"/>
             <Image x:Name="minimizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
-            <TextBlock x:Name="Title" Text="BPlay" HorizontalAlignment="Left" Margin="26,0,0,1.196" VerticalAlignment="Center" MouseMove="dragWindow" MouseLeave="setTitle" MouseEnter="smilie" FontSize="20" FontWeight="Normal" FontFamily="Roboto Light"/>
+            <TextBlock x:Name="Title" Text="BPlay" HorizontalAlignment="Left" Margin="26,3.733,0,4.986" VerticalAlignment="Center" MouseMove="dragWindow" MouseLeave="setTitle" MouseEnter="smilie" FontSize="16" FontWeight="Normal" FontFamily="Segoe UI Emoji"/>
 
 
         </Grid>
-        
 
 
-        
+
+
     </Grid>
 </Window>
